platform-network/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-allow-api-only
  namespace: lab-pack
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: postgres # Directs this firewall strictly at the Postgres pod
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: backend-fastapi # ONLY allow traffic from the FastAPI label
      ports:
        - protocol: TCP
          port: 5432 # Only bridge the database port connection socket
